tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/002-solo-assignment-to-declaration.xxx
x := (a : int = ) => () { }

// @TODO This should yield the same error.
// x := (a:int=) => () { }
